--- a/DoAn2023/Web.config
+++ b/DoAn2023/Web.config
@@ -70,6 +70,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="TuyenDungDbContext" connectionString="data source=LAPTOP-3GQFTULH;initial catalog=Career;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="TuyenDungDbContext" connectionString="data source=(.);initial catalog=Career;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
